test/FAIL/assertcmd/invalid_arguments/06_test_assert.emu
#-------
#TEST_RETURN_CODE=FAIL
#TEST_COMMENT="invalid arguments and to few"
#-------

assert w 0x13